ДЗ_8 Задание 2